--- a/test-app/fixtures/output/dev/index.html
+++ b/test-app/fixtures/output/dev/index.html
@@ -1,3 +1,3 @@
 <html>
-<body><script type="text/javascript" src="src/main.js"></script></body>
+<body><script type="text/javascript" src="main.js"></script></body>
 </html>
