Use external plugin and update windows fixtures

--- a/test-app/fixtures/windows/dev/index.html
+++ b/test-app/fixtures/windows/dev/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<div id="app"></div>
 		<div id="app-root"></div>
-	<script>
+	<script type="text/javascript" src="externals/third-party/v2.0.0/third-party.js"></script><script>
 	(function () {
 		var paths = [""];
 		var html = ["<div id=\"app\"><div id=\"div\" hasbtr=\"true\" class=\"app-m__root__YxttP theme-m__root__2d86p\">Built with Build Time Render: true\nCurrently Rendered by BTR: true</div></div>"];
