--- a/test-app/src/index.html
+++ b/test-app/src/index.html
@@ -1,9 +1,15 @@
 <html>
 	<head>
 		<title>Test App</title>
+		<link href="/assets/unhashed.css">
+		<link href="./assets/hashed.css">
 	</head>
 	<body>
+		<img src="/assets/dojo.svg">
 		<div id="app"></div>
 		<div id="app-root"></div>
+
+		<script src="/assets/unhashed.js"></script>
+		<script src="./assets/hashed.js"></script>
 	</body>
 </html>
