Add node_modules import to index.html and ignore assets directory

--- a/test-app/src/index.html
+++ b/test-app/src/index.html
@@ -3,6 +3,7 @@
 		<title>Test App</title>
 		<link href="/assets/unhashed.css">
 		<link href="./assets/hashed.css">
+		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
 	</head>
 	<body>
 		<img src="/assets/dojo.svg">
