Parse assets from index.html (#127)
- Parse, copy, and hash `<img src>`, `<script src>`, and `<link href>`
   assets from `src/index.html`.
- Update the CSS rules to limit processing to the `src/` and `tests/`
   directories.
- Ignore all assets imported from the `assets/` directory.
- Change Dojo 2 to Dojo in README.md.
- Add the `ico` extension to the images rule.

--- a/test-app/src/index.html
+++ b/test-app/src/index.html
@@ -1,9 +1,16 @@
 <html>
 	<head>
 		<title>Test App</title>
+		<link href="/assets/unhashed.css">
+		<link href="./assets/hashed.css">
+		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
 	</head>
 	<body>
+		<img src="/assets/dojo.svg">
 		<div id="app"></div>
 		<div id="app-root"></div>
+
+		<script src="/assets/unhashed.js"></script>
+		<script src="./assets/hashed.js"></script>
 	</body>
 </html>
